# fast-shape-finder

./: .gitignore  README.md  build.py  example.py  fast_shape_finder.pyx  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
